--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react-native": "0.76.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/react": "^18.3.20",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
