--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.20",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.8.2"
