--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,5 @@
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
