- Install and configure Expo Router with basic layout - Set up Jest with React Native Testing Library - Migrate app structure to use file-based routing - Configure ESLint and Prettier

--- a/app.json
+++ b/app.json
@@ -8,10 +8,11 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,6 +24,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme": "fit-match-web",
+    "plugins": ["expo-router"]
   }
 }
