--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
@@ -16,15 +16,25 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@gluestack-ui/icon": "^0.1.26",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/toast": "^1.0.9",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.40",
     "expo-constants": "^17.0.8",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-css-interop": "^0.1.22",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "react-native-svg": "^15.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,6 +55,7 @@
     "eslint-plugin-react-native": "^5.0.0",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.6",
+    "jscodeshift": "^0.15.2",
     "prettier": "^3.5.3",
     "react-test-renderer": "^18.3.1",
     "typescript": "^5.8.2"
