--- a/package.json
+++ b/package.json
@@ -20,20 +20,22 @@
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/toast": "^1.0.9",
+    "@types/react-dom": "^19.0.4",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~52.0.40",
+    "expo": "~52.0.41",
     "expo-constants": "^17.0.8",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-dom": "^19.1.0",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
-    "react-native-svg": "^15.2.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
