--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/button": "^1.0.14",
+    "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/icon": "^0.1.26",
+    "@gluestack-ui/input": "^0.1.38",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/themed": "^1.1.71",
     "@gluestack-ui/toast": "^1.0.9",
     "@types/react-dom": "^19.0.4",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -27,13 +32,14 @@
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "^19.1.0",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "tailwindcss": "^3.4.17"
