--- a/package.json
+++ b/package.json
@@ -16,15 +16,6 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@gluestack-style/react": "^1.0.57",
-    "@gluestack-ui/button": "^1.0.14",
-    "@gluestack-ui/config": "^1.1.20",
-    "@gluestack-ui/icon": "^0.1.26",
-    "@gluestack-ui/input": "^0.1.38",
-    "@gluestack-ui/nativewind-utils": "^1.0.26",
-    "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/themed": "^1.1.71",
-    "@gluestack-ui/toast": "^1.0.9",
     "@types/react-dom": "^19.0.4",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.41",
@@ -38,10 +29,12 @@
     "react-dom": "^19.1.0",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
