--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@types/react-dom": "^19.0.4",
+    "@types/react-dom": "~18.3.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "deepmerge": "^4.3.1",
-    "expo": "~52.0.41",
+    "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
@@ -27,8 +27,8 @@
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-dom": "^19.1.0",
-    "react-native": "0.76.7",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.8",
     "react-native-css-interop": "^0.1.22",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
@@ -36,7 +36,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
