--- a/package.json
+++ b/package.json
@@ -16,35 +16,28 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.9.6",
     "@types/react-dom": "~18.3.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.42",
-    "expo-auth-session": "~6.0.3",
     "expo-constants": "^17.0.8",
     "expo-linking": "^7.0.5",
-    "expo-random": "^14.0.1",
     "expo-router": "^4.0.19",
-    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
     "react-native-css-interop": "^0.1.22",
-    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
-    "expo-crypto": "~14.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
