--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.9.6",
     "@types/react-dom": "~18.3.1",
-    "babel-plugin-module-resolver": "^5.0.2",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.42",
+    "expo-auth-session": "~6.0.3",
     "expo-constants": "^17.0.8",
     "expo-crypto": "~14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
@@ -41,9 +42,7 @@
     "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17",
-    "expo-web-browser": "~14.0.2",
-    "expo-auth-session": "~6.0.3"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -56,6 +55,7 @@
     "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^12.0.9",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.1",
