--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "~14.0.2",
+    "lottie-react-native": "^7.2.2",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
