--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.9.6",
+    "@clerk/clerk-expo": "^2.10.0",
+    "@tanstack/react-query": "^5.74.4",
     "@types/react-dom": "~18.3.1",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.42",
