--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1ndXBweS00Ny5jbGVyay5hY2NvdW50cy5kZXYk
-API_BASE_URL = 'https://fit-match-web.vercel.app/api';
+# API_BASE_URL = 'https://fit-match-web.vercel.app/api';
