--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.10.0",
+    "@react-navigation/native": "^7.1.10",
     "@tanstack/react-query": "^5.74.4",
     "@types/react-dom": "~18.3.1",
     "deepmerge": "^4.3.1",
