--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
     "@clerk/clerk-expo": "^2.10.0",
     "@react-navigation/native": "^7.1.10",
     "@tanstack/react-query": "^5.74.4",
