addeed placeholder drawer

--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "dependencies": {
     "@babel/runtime": "^7.27.6",
     "@clerk/clerk-expo": "^2.10.0",
+    "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.10",
     "@tanstack/react-query": "^5.74.4",
     "@types/react-dom": "~18.3.1",
     "deepmerge": "^4.3.1",
     "expo": "~52.0.42",
     "expo-auth-session": "~6.0.3",
-    "expo-constants": "^17.0.8",
+    "expo-constants": "~17.0.8",
     "expo-crypto": "~14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "^4.0.19",
@@ -33,10 +34,12 @@
     "expo-web-browser": "~14.0.2",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
+    "npm": "^11.4.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.8",
+    "react-native": "0.76.9",
     "react-native-css-interop": "^0.1.22",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
@@ -51,7 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-runtime": "^7.26.10",
-    "@expo/config": "^11.0.10",
+    "@expo/config": "^10.0.11",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.9.0",
     "@tsconfig/react-native": "^3.0.5",
