--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "semi": true,
-  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "printWidth": 100,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "semi": true,
   "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "printWidth": 80,
+  "arrowParens": "always"
 }
