--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "hustle-types": "github:hannahborel/hustle-types",
+    "jotai": "^2.12.5",
+    "lodash": "^4.17.21",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "npm": "^11.4.2",
