--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@clerk/clerk-expo": "^2.14.3",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
+    "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/react-dom": "~19.1.6",
     "deepmerge": "^4.3.1",
@@ -34,6 +35,7 @@
     "expo-web-browser": "~14.2.0",
     "hustle-types": "github:hannahborel/hustle-types",
     "jotai": "^2.12.5",
+    "jotai-tanstack-query": "^0.9.2",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
