--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/react-dom": "~19.1.6",
+    "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "expo": "~53.0.19",
     "expo-auth-session": "~6.2.1",
