--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-pager-view": "^6.8.1",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-tabs": "^0.11.4",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
