--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/runtime": "^7.27.6",
     "@clerk/clerk-expo": "^2.14.3",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@tanstack/query-core": "^5.83.0",
