--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^7.1.14",
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "@types/react-dom": "~19.1.6",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
