--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@clerk/clerk-expo": "^2.14.3",
     "@dev-plugins/react-query": "^0.3.1",
     "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.1.14",
     "@tanstack/query-core": "^5.83.0",
@@ -38,6 +39,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "hustle-types": "github:hannahborel/hustle-types",
+    "install": "^0.13.0",
     "jotai": "^2.12.5",
     "jotai-tanstack-query": "^0.9.2",
     "lodash": "^4.17.21",
