--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/runtime": "^7.27.6",
     "@clerk/clerk-expo": "^2.14.3",
     "@dev-plugins/react-query": "^0.3.1",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/drawer": "^7.5.3",
@@ -31,6 +32,7 @@
     "deepmerge": "^4.3.1",
     "expo": "~53.0.20",
     "expo-auth-session": "~6.2.1",
+    "expo-clipboard": "^7.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-linking": "^7.1.7",
