--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1ndXBweS00Ny5jbGVyay5hY2NvdW50cy5kZXYk
 # API_BASE_URL = 'https://fit-match-web.vercel.app/api'
-API_BASE_URL = 'http://localhost:3001/api'
+API_BASE_URL = 'http://localhost:3000/api'
 # API_BASE_URL = 'http://192.168.87.20:3000/api'
+# Web App URL for invitation links
+WEB_APP_URL=http://localhost:3000
+# WEB_APP_URL=exp://192.168.1.100:8081
+# WEB_APP_URL=https://staging.yourdomain.com
+# WEB_APP_URL=https://yourdomain.com
