--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1ndXBweS00Ny5jbGVyay5hY2NvdW
 # WEB_APP_URL='https://fit-match-web.vercel.app'
 
 # Local Api and Local Invitation Links
-API_BASE_URL = 'http://localhost:3000/api'
-WEB_APP_URL=http://localhost:3000
+API_BASE_URL = 'https://hustle-web-app.vercel.app/api'
+WEB_APP_URL='https://hustle-web-app.vercel.app'
 
 #Local IP
 # API_BASE_URL = 'http://192.168.87.20:3000/api'
