I made a bunch of changes. I need to fix the login flow. will do that another time

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1ndXBweS00Ny5jbGVyay5hY2NvdW50cy5kZXYk
 
 # Deployed API
-API_BASE_URL='https://fit-match-web.vercel.app/api'
-WEB_APP_URL='https://fit-match-web.vercel.app'
+API_BASE_URL='https://hustle-web-app.vercel.app/api'
+WEB_APP_URL='https:/hustle-web-app.vercel.app'
 
 # Local Api and Local Invitation Links
 # API_BASE_URL ='http://localhost:3000/api'
