--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fit-match-web",
+  "name": "hustle-mobile",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "@types/react-dom": "~19.1.6",
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
+    "dotenv": "^17.2.3",
     "expo": "~53.0.20",
     "expo-auth-session": "~6.2.1",
     "expo-clipboard": "^7.1.5",
