--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-picker/picker": "^2.11.1",
-    "@react-navigation/drawer": "^7.5.3",
-    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/native": "^7.1.6",
     "@tanstack/query-core": "^5.83.0",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
@@ -32,13 +32,13 @@
     "date-fns": "^4.1.0",
     "deepmerge": "^4.3.1",
     "dotenv": "^17.2.3",
-    "expo": "~53.0.20",
+    "expo": "~53.0.23",
     "expo-auth-session": "~6.2.1",
     "expo-clipboard": "^7.1.5",
     "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
     "expo-linking": "^7.1.7",
-    "expo-router": "^5.1.4",
+    "expo-router": "^5.1.7",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
@@ -48,14 +48,10 @@
     "jotai-tanstack-query": "^0.9.2",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.525.0",
-    "nativewind": "^4.1.23",
-    "npm": "^11.4.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-css-interop": "^0.1.22",
+    "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-paper-tabs": "^0.11.4",
@@ -66,8 +62,7 @@
     "react-native-svg-transformer": "^1.5.1",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.20.0",
-    "tailwindcss": "^4.1.11"
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -80,7 +75,7 @@
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "babel-preset-expo": "^13.0.0",
+    "babel-preset-expo": "~13.0.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -90,8 +85,8 @@
     "jest-expo": "^53.0.9",
     "jscodeshift": "^17.3.0",
     "prettier": "^3.6.2",
-    "react-test-renderer": "^19.1.0",
-    "typescript": "^5.8.3"
+    "react-test-renderer": "^19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
