--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.claude/settings.local.json
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
