--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@testing-library/react-native": "^13.2.0",
     "@tsconfig/react-native": "^3.0.6",
     "@types/jest": "^30.0.0",
-    "@types/react": "^19.0.14",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -84,9 +84,15 @@
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
     "jscodeshift": "^17.3.0",
+    "patch-package": "^8.0.1",
     "prettier": "^3.6.2",
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@expo/metro-config@0.20.17": "patches/@expo__metro-config@0.20.17.patch"
+    }
   },
   "private": true
 }
