updated most of the sign up sign in login flow

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1ndXBweS00Ny5jbGVyay5hY2NvdW50cy5kZXYk
 
 # Deployed API
-API_BASE_URL='https://hustle-web-app.vercel.app/api'
-WEB_APP_URL='https:/hustle-web-app.vercel.app'
+# API_BASE_URL='https://hustle-web-app.vercel.app/api'
+# WEB_APP_URL='https:/hustle-web-app.vercel.app'
 
 # Local Api and Local Invitation Links
-# API_BASE_URL ='http://localhost:3000/api'
-# WEB_APP_URL='http://localhost:3000'
+API_BASE_URL ='http://localhost:3000/api'
+WEB_APP_URL='http://localhost:3000'
 
 #Local IP
 # API_BASE_URL = 'http://192.168.87.20:3000/api'
