--- a/eas.json
+++ b/eas.json
@@ -19,6 +19,8 @@
       }
     },
     "production": {
+      "node": "22.11.0",
+      "pnpm": "10.11.1",
       "ios": {
         "resourceClass": "m-medium"
       }
