--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/.claude/settings.local.json
+.claude/
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
