--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
-    "hustle-types": "github:hannahborel/hustle-types#master",
+    "hustle-types": "file:../hustle-types",
     "install": "^0.13.0",
     "jotai": "^2.12.5",
     "jotai-tanstack-query": "^0.9.2",
